src/styles/Home.module.css
.hero {
  width: 100%;
  color: #333;
  height: 64vw; /* This height is set to match the ratio of the background image used, can be removed if different image method is selected */
  grid-column: 1 / -1;
  background-image: url('/img/home_hero.jpg');
  background-size: cover;
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  align-items: center;
  justify-items: center;
}

.heroContent {
  background-color: rgba(240, 248, 255, 0.8);
  padding: 3rem;
  display: grid;
  align-items: center;
}

.homeContent {
  padding: 3rem;
  display: grid;
  gap: 3.5rem;
  grid-template-columns: 1fr;
  grid-column: 1 / -1;
  width: 100%;
  max-width: 1300px;
  margin: 0 auto;
}

.section {
  display: grid;
  grid-gap: 3.5rem;
  align-items: center;
}

.section:nth-child(even) {
  grid-template-areas: 'image copy copy';
  grid-template-columns: auto 1fr 1fr;
}

.section:nth-child(odd) {
  grid-template-areas: 'copy copy image';
  grid-template-columns: 1fr 1fr auto;
  justify-items: right;
}

.eventSection {
  padding: 0.5rem;
  display: grid;
  gap: 2rem;
  grid-template-columns: 1fr;
  grid-column: 1 / -1;
  max-width: 1300px;
  margin: 0 auto;
}

.eventSection h2 {
  text-align: center;
}

.eventSectionContent {
  display: grid;
  grid-gap: 3.5rem;
  align-items: center;
  grid-template-columns: repeat(3, 1fr);
}

.imageWrapper {
  grid-area: image;
}

.sectionContent {
  grid-area: copy;
  .copy {
    padding: 1rem 0;
  }
}

.socialMedia {
  display: grid;
  grid-template-columns: 1fr;
  grid-gap: 2rem;
  padding-top: 1.5rem;
  align-items: center;
  justify-items: center;
  border-top: 1px solid #333;
}

@media screen and (min-width: 1025px) {
  .hero {
    background-image: url('/img/home_hero_xl.jpg');
  }
}

@media screen and (max-width: 650px) {
  .hero {
    width: 100%;
    color: #333;
    height: 134vw;
    grid-column: 1 / -1;
    background-image: url('/img/home_hero_mobile.jpg');
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    align-items: end;
    justify-items: stretch;
  }

  .heroContent {
    background-color: rgba(240, 248, 255, 0.8);
    padding: 3rem;
    margin-bottom: 2rem;
    grid-column: 1 / -1;
    display: grid;
    align-items: center;
    justify-items: center;
  }

  .homeContent {
    padding: 0.75rem;
  }

  .section {
    display: grid;
    grid-gap: 2rem;
    align-items: center;
    margin-bottom: 2rem;
  }

  .section:nth-child(odd),
  .section:nth-child(even) {
    grid-template-columns: 1fr;
    justify-items: center;
    grid-template-areas:
      'image'
      'copy';
  }

  .eventSection {
    display: grid;
    grid-gap: 3.5rem;
    align-items: center;
    grid-template-columns: 1fr;
  }
}

